# pyproject_packaging

./: README.md  pyproject.toml
src/example_package_20laique23/: age_calculator.py  mini_calculator.py
