[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_20laique23"
version = "2023.0.0.3"
authors = [{name="Laique Djeutchouang", email="ldjeutchouang@aims.ac.tz"}, ]
description = "A small example of packaging Python Projects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent", ]

[project.urls]
"Homepage" = "https://github.com/Djeutsch/pypackagingproject"
"Bug Tracker" = "https://github.com/Djeutsch/pypackagingproject/issues"

